--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link herf="style.css" rel="stylesheet" type="text/css" />
+    <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
     <h1>자기소개서</h1>
@@ -28,7 +28,7 @@
     <p>직접 설정해보세요!</p>
     <input type="color"/>
     <h2>인적사항</h2>
-    <table>
+    <table border="1">
         <tr>
             <th>질문</th>
             <th>답변</th>
