--- a/google_site-task3-final/index.html
+++ b/google_site-task3-final/index.html
@@ -13,9 +13,9 @@
     <div id="survey-background"></div>
     <div id="survey-container">
     <div class="navbar">
-        <a href="#" class="nav-item">Gmail</a>
-        <a href="#" class="nav-item">Images</a>
-        <i class="fa-solid fa-bars"></i>
+        <input type="button" class="img-button" onclick="alert('Gmail로 이동합니다.'); window.open('https://mail.google.com');">
+        <input type="button" class="img-button1" onclick="alert('이미지를 표시합니다.')">
+        <i class="fa-solid fa-bars" style="font-size: 30px;" onclick="alert('앱을 표시합니다.')"></i>
     </div>
 
     <div class="main">
