--- a/google_site-task3-final/index.html
+++ b/google_site-task3-final/index.html
@@ -12,6 +12,7 @@
 <body>
     <div id="survey-background"></div>
     <div id="survey-container">
+    <span><img src="./assets/sun.png" class="suny"/></span>
     <div class="navbar">
         <input type="button" class="img-button" onclick="alert('Gmail로 이동합니다.'); window.open('https://mail.google.com');">
         <input type="button" class="img-button1" onclick="alert('이미지를 표시합니다.')">
@@ -19,7 +20,7 @@
     </div>
 
     <div class="main">
-        <img src="./assets/무제440_20250109002655.png" style="position: relative; left: 8px;" width="350"/>
+        <img src="./assets/무제440_20250109002655.png" style="position: relative; top: -10px; left: 8px;" width="350"/>
         <div class="input-area">
             <i class="fa-solid fa-magnifying-glass serch-icon"></i>
             <input type="text" class="input-box"/>
@@ -39,9 +40,12 @@
 
     </div>
 
-    <div id="cc-container">
+    <span id="cc-container">
     <img id="cc-cat" src="./assets/ccat-removebg-preview.png" alt="Cat" />
-</div>
+    </span>
+    <span id="ccc-container">
+        <img id="ccc-cat" src="./assets/ccccat-removebg-preview.png" alt="Cat1" />
+        </span>
 
 
     <div class="footer">
