--- a/spotify_site-task5/index.html
+++ b/spotify_site-task5/index.html
@@ -21,8 +21,13 @@
             <div class="nav-item"><a href="#">Log in</a></div>
         </div>
     </nav>
+        <span class="box1"></span>
+        <span class="box2"></span>
+        <span class="box3"></span>
     <main>
         <div class="main-container">
+            
+
             <div class="headline">
                 <div class="heaaline1">Listening is</div>
                 <div>everything</div>
