--- a/bootstrap-task6/index.html
+++ b/bootstrap-task6/index.html
@@ -14,7 +14,8 @@
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <a class="navbar-brand" href="#">LOUIS VUITTON</a>
+          <a class="navbar-brand" href="#">
+            <h2>LOUIS VUITTON</h2></a>
           <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
@@ -24,13 +25,13 @@
                 <a class="nav-link" href="#">WOMEN</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link disabled" aria-disabled="true">MEN</a>
+                <a class="nav-link "  aria-disabled="true" href="#">MEN</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link disabled" aria-disabled="true">ART OF LIVING</a>
+                <a class="nav-link " aria-disabled="true" href="#" >ART OF LIVING</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link disabled" aria-disabled="true">MAGAGINE</a>
+                <a class="nav-link "  aria-disabled="true" href="#">MAGAGINE</a>
               </li>
             </ul>
             <form class="d-flex" role="search">
@@ -40,5 +41,27 @@
           </div>
         </div>
       </nav>
+      <div id="carouselExampleIndicators" class="carousel slide">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="https://www.louisvuitton.com/images/%EB%A3%A8%EC%9D%B4-%EB%B9%84%ED%86%B5--20201208_KR_PUSH1_DI1.jpg?wid=1240" alt="..." class="first-img">
+          </div>
+          <div class="carousel-item">
+            <img src="https://www.louisvuitton.com/images/%EB%A3%A8%EC%9D%B4-%EB%B9%84%ED%86%B5--20201208__14_KR_PUSH1_DI1.jpg?wid=1240" class="d-block w-100" alt="...">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
   </body>
 </html>
