--- a/bootstrap-task6/index.html
+++ b/bootstrap-task6/index.html
@@ -41,6 +41,8 @@
           </div>
         </div>
       </nav>
+    </div>
+    <div>
       <div id="carouselExampleIndicators" class="carousel slide">
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -62,6 +64,12 @@
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
         </button>
-      </div>
+    </div>
+        <div class="grid text-center lg-title">
+            <h2>JOURNEY HOME FOR THE HOLIDAYS</h2>
+            <p>Starring Alicia Vikander</p>
+            <button type="button" class="btn btn-dark">Discover the Campagine</button>
+        </div>
+    
   </body>
 </html>
