--- a/bootstrap-task6/index.html
+++ b/bootstrap-task6/index.html
@@ -70,6 +70,29 @@
             <p>Starring Alicia Vikander</p>
             <button type="button" class="btn btn-dark">Discover the Campagine</button>
         </div>
-    
+        
+
+<div class="container pt-5 pb-5">
+    <div class="row">
+        <div class="card col-md-4 col-sm-12 ">
+            <img src="https://www.louisvuitton.com/images/louis-vuitton--U_Holidays_2020_Push5_V2_DI1.jpg?wid=656" class="card-img-top" alt="...">
+            <div class="card-body text-center">
+                <h2 class="card-text">LATEST SELECTION</h2>
+            </div>
+        </div>
+        <div class="card col-md-4 col-sm-12">
+            <img src="https://www.louisvuitton.com/images/louis-vuitton--U_Holidays_2020_Push6_V2_DI1.jpg?wid=656" class="card-img-top" alt="...">
+            <div class="card-body text-center">
+                <h2 class="card-text ">LATEST SELECTION</h2>
+            </div>
+        </div>
+        <div class="card col-md-4 col-sm-12 ">
+            <img src="https://www.louisvuitton.com/images/louis-vuitton--U_Holidays_2020_Push7_V2_DI1.jpg?wid=656" class="card-img-top" alt="...">
+            <div class="card-body text-center">
+                <h2 class="card-text">LATEST SELECTION</h2>
+            </div>
+        </div>
+    </div>
+</div>
   </body>
 </html>
