--- a/bootstrap-task6/index.html
+++ b/bootstrap-task6/index.html
@@ -8,7 +8,7 @@
     <link href="style.css" rel="stylesheet" />
   </head>
   <body>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
@@ -70,29 +70,59 @@
             <p>Starring Alicia Vikander</p>
             <button type="button" class="btn btn-dark">Discover the Campagine</button>
         </div>
-        
-
-<div class="container pt-5 pb-5">
-    <div class="row">
-        <div class="card col-md-4 col-sm-12 ">
-            <img src="https://www.louisvuitton.com/images/louis-vuitton--U_Holidays_2020_Push5_V2_DI1.jpg?wid=656" class="card-img-top" alt="...">
-            <div class="card-body text-center">
-                <h2 class="card-text">LATEST SELECTION</h2>
-            </div>
+        <div class="container pt-5 pb-5">
+          <div class="row">
+              <div class="col-md-4 col-sm-12">
+                  <div class="card">
+                      <img src="https://www.louisvuitton.com/images/louis-vuitton--U_Holidays_2020_Push5_V2_DI1.jpg?wid=656" class="card-img-top" alt="...">
+                      <div class="card-body text-center">
+                          <h2 class="card-text">LATEST SELECTION</h2>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-md-4 col-sm-12">
+                  <div class="card">
+                      <img src="https://www.louisvuitton.com/images/louis-vuitton--U_Holidays_2020_Push6_V2_DI1.jpg?wid=656" class="card-img-top" alt="...">
+                      <div class="card-body">
+                          <h2 class="card-text text-center">GIFTS FOR HIM</h2>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-md-4 col-sm-12">
+                  <div class="card">
+                      <img src="https://www.louisvuitton.com/images/louis-vuitton--U_Holidays_2020_Push7_V2_DI1.jpg?wid=656" class="card-img-top" alt="...">
+                      <div class="card-body">
+                          <h2 class="card-text text-center">GIFTS FOR HER</h2>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+  <footer>
+    <div class="container">
+        <div class="first-line pb-5 pt-5">
+            LOUIS VUITTON
         </div>
-        <div class="card col-md-4 col-sm-12">
-            <img src="https://www.louisvuitton.com/images/louis-vuitton--U_Holidays_2020_Push6_V2_DI1.jpg?wid=656" class="card-img-top" alt="...">
-            <div class="card-body text-center">
-                <h2 class="card-text ">LATEST SELECTION</h2>
+        <div class="row pb-5 pt-5 second-line ">
+            <div class="flag col">
+                <img src="https://us.louisvuitton.com/flags/us.svg" width="16" height="12">
+                Unitied States
             </div>
-        </div>
-        <div class="card col-md-4 col-sm-12 ">
-            <img src="https://www.louisvuitton.com/images/louis-vuitton--U_Holidays_2020_Push7_V2_DI1.jpg?wid=656" class="card-img-top" alt="...">
-            <div class="card-body text-center">
-                <h2 class="card-text">LATEST SELECTION</h2>
-            </div>
+            <div class="col"><a href="#">
+                Email Sign-Up</a></div>
+            <div class="col"> <a href="#">Contact Us</a></div>
+            <div class="col"> <a href="#">Apps</a></div>
+            <div class="col"> <a href="#">Follow Us</a></div>
+            <div class="col"> <a href="#">California Transparency</a></div>
+            <div class="col"><a href="#"> Legal Notice</a></div>
+            <div class="col"> <a href="#">Careers</a></div>
+            <div class="col"> <a href="#">Sitemap</a></div>     
+        </div>         
+        <div class=" mobile-footer third-line">
+            Shipt to : <img src="https://us.louisvuitton.com/flags/us.svg" width="16" height="12" class="flag-img"> Unitied States
         </div>
     </div>
-</div>
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
